--- a/resources/edpad.css
+++ b/resources/edpad.css
@@ -1,5 +1,5 @@
 window {
-    background-image: url('@SHAREDIR@/edpad.png');
+    background-image: url('/home/vesemir/.local/share/edpad/edpad.png');
     background-repeat: no-repeat;
     background-position: center;
 }
