--- a/resources/edpad.glade
+++ b/resources/edpad.glade
@@ -88,14 +88,15 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="1">
+                  <object class="GtkButton" id="1">
                     <property name="label" translatable="yes">&#13;[1]&#13;</property>
                     <property name="name">1</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
                     <property name="hexpand">True</property>
-                    <signal name="clicked" handler="onToggle" swapped="no"/>
+                    <signal name="pressed" handler="onPress" swapped="no"/>
+                    <signal name="released" handler="onRelease" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -104,14 +105,15 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="2">
+                  <object class="GtkButton" id="2">
                     <property name="label" translatable="yes">[2]</property>
                     <property name="name">2</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
                     <property name="hexpand">True</property>
-                    <signal name="clicked" handler="onToggle" swapped="no"/>
+                    <signal name="pressed" handler="onPress" swapped="no"/>
+                    <signal name="released" handler="onRelease" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -120,14 +122,15 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="3">
+                  <object class="GtkButton" id="3">
                     <property name="label" translatable="yes">[3]</property>
                     <property name="name">3</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
                     <property name="hexpand">True</property>
-                    <signal name="clicked" handler="onToggle" swapped="no"/>
+                    <signal name="pressed" handler="onPress" swapped="no"/>
+                    <signal name="released" handler="onRelease" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -136,14 +139,15 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkToggleButton" id="4">
+                  <object class="GtkButton" id="4">
                     <property name="label" translatable="yes">[4]</property>
                     <property name="name">4</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
                     <property name="hexpand">True</property>
-                    <signal name="clicked" handler="onToggle" swapped="no"/>
+                    <signal name="pressed" handler="onPress" swapped="no"/>
+                    <signal name="released" handler="onRelease" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
