--- a/resources/edpad.glade
+++ b/resources/edpad.glade
@@ -8,6 +8,8 @@
   <object class="GtkApplicationWindow" id="window">
     <property name="name">window</property>
     <property name="can-focus">False</property>
+    <property name="hide-titlebar-when-maximized">True</property>
+    <property name="decorated">False</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
